                        Dear Emacs, please make this -*-Text-*- mode!

                CHANGES IN tm VERSION 0.5

SIGNIFICANT USER-VISIBLE CHANGES

    o   All classes, functions, and generics are reimplemented using
        the S3 class system.

    o   Following functions have been renamed:

          activateCluster()   to tm_startCluster()     ,
          asPlain()           to as.PlainTextDocument(),
          deactivateCluster() to tm_stopCluster()      ,
          tmFilter()          to tm_filter()           ,
          tmIndex()           to tm_index()            ,
          tmIntersect()       to tm_intersect()        , and
          tmMap()             to tm_map()              .

    o   Mail handling functionality is factored out to the
        tm.plugin.mail package.

DEPRECATED & DEFUNCT

    o   Following functions have been removed:

          tmTolower()         (use tolower() instead), and
          replacePatterns()   (use gsub()    instead).

                CHANGES IN tm VERSION 0.4

SIGNIFICANT USER-VISIBLE CHANGES

    o   The Corpus class is now virtual providing an abstract
        interface.

    o   VCorpus, the default implementation of the abstract corpus
        interface (by subclassing), provides a corpus with volatile (=
        standard R object) semantics. It loads all documents into
        memory, and is designed for small to medium-sized data sets.

    o   PCorpus, an implementation of the abstract corpus interface (by
        subclassing), provides a corpus with permanent storage
        semantics. The actual data is stored in an external database
        (file) object (as supported by the filehash package), with
        automatic (un-)loading into memory. It is designed for systems
        with small memory.

    o   Language codes are now in ISO 639-2 (instead of ISO 639-1).

    o   Reader functions no longer have a load argument for lazy
        loading.

NEW FEATURES
