@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.5
-Date: 2009-09-08
+Version: 0.5-1
+Date: 2009-10-27
 Author: Ingo Feinerer
 Maintainer: Ingo Feinerer <feinerer@logic.at>
 Depends: R (>= 2.7.0)
@@ -10,6 +10,6 @@ Suggests: filehash, proxy, Rgraphviz, Rmpi, RWeka, snow, Snowball, XML
 Description: A framework for text mining applications within R.
 License: GPL (>= 2)
 URL: http://tm.r-forge.r-project.org/
-Packaged: 2009-09-10 19:39:02 UTC; hornik
+Packaged: 2009-10-27 19:04:44 UTC; hornik
 Repository: CRAN
-Date/Publication: 2009-09-10 19:52:53
+Date/Publication: 2009-10-27 19:46:36
