@@ -1,7 +1,6 @@
 \documentclass[a4paper]{article}
 
 \usepackage[margin=2cm]{geometry}
-\usepackage[utf8]{inputenc}
 \usepackage[round]{natbib}
 \usepackage{url}
 
