@@ -5,14 +5,13 @@
   Convert the encoding of a character or text document to UTF-8.
 }
 \usage{
-convert_UTF_8(x, from = "", sub = NA, \dots)
+convert_UTF_8(x, from = "", sub = NA)
 }
 \arguments{
   \item{x}{A character or text document.}
   \item{from}{A character string describing the current encoding.}
   \item{sub}{A character string. If not 'NA' it is used to replace any
     non-convertible bytes in the input.}
-  \item{\dots}{Additional arguments.}
 }
 \value{
   The character or text document \code{x} converted to UTF-8 encoding.
